--- a/src/karl/gong/ptest/PythonPTestRunConfigurationEditor.form
+++ b/src/karl/gong/ptest/PythonPTestRunConfigurationEditor.form
@@ -18,15 +18,12 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="24361" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="24361" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="2" col-span="3" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-		<clientProperties>
-          <BorderFactoryClass class="java.lang.String" value="com.intellij.ui.IdeBorderFactory$PlainSmallWithIndent"/>
-        </clientProperties>
         <border type="empty" title="ptest">
           <size top="0" left="0" bottom="0" right="0"/>
         </border>
@@ -38,7 +35,7 @@
             <properties>
               <horizontalAlignment value="2"/>
               <selected value="false"/>
-              <text value="&amp;Run failed"/>
+              <text value="&amp;Run failed:"/>
               <toolTipText value="Specify xunit xml to run with failed/skipped tests.&#10;-R command line option in ptest"/>
             </properties>
           </component>
@@ -50,25 +47,25 @@
               <horizontalAlignment value="2"/>
               <horizontalTextPosition value="11"/>
               <selected value="true"/>
-              <text value="&amp;Test targets"/>
+              <text value="&amp;Test targets:"/>
               <toolTipText value="Specify test targets, separated by comma.&#10;-t command line option in ptest"/>
             </properties>
           </component>
           <component id="dd454" class="javax.swing.JCheckBox" binding="optionsCheckBox">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;Options"/>
-              <toolTipText value="Specify command line options."/>
+              <text value="&amp;Options:"/>
+              <toolTipText value="Specify command line options.&#10;NOTE:&#10;1. Please don't use -t,-R,-v,--disablescreenshot, they are specified in other fields.&#10;2. If you use -n to specify the number of test executors more than one, the testcase output in console might be messed up."/>
             </properties>
           </component>
           <component id="14552" class="javax.swing.JCheckBox" binding="variablesCheckBox">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;Variables"/>
+              <text value="&amp;Variables:"/>
               <toolTipText value="Specify command line variable definitions.&#10;Format: -D{key}={value}"/>
             </properties>
           </component>
@@ -94,7 +91,7 @@
           </component>
           <component id="dafb5" class="com.intellij.ui.RawCommandLineEditor" binding="optionsTextField">
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <dialogCaption value="Enter command line options"/>
@@ -104,12 +101,49 @@
           </component>
           <component id="29b6f" class="com.intellij.ui.RawCommandLineEditor" binding="variablesTextField">
             <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <dialogCaption value="Enter command line variables"/>
               <enabled value="false"/>
               <toolTipText value=""/>
+            </properties>
+          </component>
+          <component id="ea83c" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="2" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <inheritsPopupMenu value="true"/>
+              <text value="  &amp;Workspace:"/>
+              <toolTipText value="Specify the workspace of ptest.&#10;-w command line option in ptest"/>
+            </properties>
+          </component>
+          <component id="ebd39" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="workspaceTextField">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <toolTipText value=""/>
+            </properties>
+          </component>
+          <component id="e0987" class="javax.swing.JCheckBox" binding="verboseCheckBox">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <selected value="true"/>
+              <text value="Verbose &amp;mode"/>
+              <toolTipText value="Set console to verbose mode.&#10;-v command line option in ptest"/>
+            </properties>
+          </component>
+          <component id="72ad8" class="javax.swing.JCheckBox" binding="disableScreenshotCheckBox">
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="&amp;Disable screenshot"/>
+              <toolTipText value="Disable taking screenshot for failed test fixtures.&#10;--disablescreenshot command line option in ptest"/>
             </properties>
           </component>
         </children>
