--- a/src/java/com/iselsoft/ptest/runConfiguration/PTestRunConfigurationEditor.form
+++ b/src/java/com/iselsoft/ptest/runConfiguration/PTestRunConfigurationEditor.form
@@ -60,13 +60,13 @@
               <toolTipText value="Specify command line options.&#10;NOTE:&#10;1. Please don't use -t,-R,-v,--disablescreenshot, they are specified in other fields.&#10;2. If you use -n to specify the number of test executors more than one, the testcase output in console might be messed up."/>
             </properties>
           </component>
-          <component id="14552" class="javax.swing.JCheckBox" binding="variablesCheckBox">
+          <component id="14552" class="javax.swing.JCheckBox" binding="propertiesCheckBox">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;Variables:"/>
-              <toolTipText value="Specify command line variable definitions.&#10;Format: -D{key}={value}"/>
+              <text value="&amp;Properties:"/>
+              <toolTipText value="Specify command line properties definitions.&#10;Format: -D{key}={value}"/>
             </properties>
           </component>
           <component id="d2c88" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="xunitXMLTextField">
@@ -99,12 +99,12 @@
               <toolTipText value=""/>
             </properties>
           </component>
-          <component id="29b6f" class="com.intellij.ui.RawCommandLineEditor" binding="variablesTextField">
+          <component id="29b6f" class="com.intellij.ui.RawCommandLineEditor" binding="propertiesTextField">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <dialogCaption value="Enter command line variables"/>
+              <dialogCaption value="Enter command line properties"/>
               <enabled value="false"/>
               <toolTipText value=""/>
             </properties>
