--- a/src/java/com/github/ptest/runConfiguration/PTestRunConfigurationEditor.form
+++ b/src/java/com/github/ptest/runConfiguration/PTestRunConfigurationEditor.form
@@ -65,7 +65,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;Property File:"/>
+              <text value="Property &amp;file:"/>
               <toolTipText value="Specify the .ini property file.&#10;-p command line option in ptest."/>
             </properties>
           </component>
