--- a/src/main/java/com/github/ptest/runConfiguration/PTestRunConfigurationEditor.form
+++ b/src/main/java/com/github/ptest/runConfiguration/PTestRunConfigurationEditor.form
@@ -24,7 +24,7 @@
           <grid row="0" column="0" row-span="2" col-span="3" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="empty" title="ptest">
+        <border type="empty" title="com.github.ptest">
           <size top="0" left="0" bottom="0" right="0"/>
         </border>
         <children>
@@ -37,7 +37,7 @@
               <horizontalTextPosition value="11"/>
               <selected value="true"/>
               <text value="&amp;Test targets:"/>
-              <toolTipText value="Specify test targets, separated by comma.&#10;-t command line option in ptest."/>
+              <toolTipText value="Specify test targets, separated by comma.&#10;-t command line option in com.github.ptest."/>
             </properties>
           </component>
           <component id="d7c3d" class="javax.swing.JRadioButton" binding="runFailedRadioButton">
@@ -48,7 +48,7 @@
               <horizontalAlignment value="2"/>
               <selected value="false"/>
               <text value="&amp;Run failed:"/>
-              <toolTipText value="Specify xunit xml to run with failed/skipped tests.&#10;-R command line option in ptest."/>
+              <toolTipText value="Specify xunit xml to run with failed/skipped tests.&#10;-R command line option in com.github.ptest."/>
             </properties>
           </component>
           <component id="dd454" class="javax.swing.JCheckBox" binding="optionsCheckBox">
@@ -66,7 +66,7 @@
             </constraints>
             <properties>
               <text value="Property &amp;file:"/>
-              <toolTipText value="Specify the .ini property file.&#10;-p command line option in ptest."/>
+              <toolTipText value="Specify the .ini property file.&#10;-p command line option in com.github.ptest."/>
             </properties>
           </component>
           <component id="24562" class="javax.swing.JCheckBox" binding="propertiesCheckBox">
@@ -135,7 +135,7 @@
             <properties>
               <selected value="true"/>
               <text value="Verbose &amp;mode"/>
-              <toolTipText value="Set console to verbose mode.&#10;-v command line option in ptest."/>
+              <toolTipText value="Set console to verbose mode.&#10;-v command line option in com.github.ptest."/>
             </properties>
           </component>
           <component id="72ad8" class="javax.swing.JCheckBox" binding="disableScreenshotCheckBox">
@@ -144,7 +144,7 @@
             </constraints>
             <properties>
               <text value="&amp;Disable screenshot"/>
-              <toolTipText value="Disable taking screenshot for preporter.&#10;--disable-screenshot command line option in ptest."/>
+              <toolTipText value="Disable taking screenshot for preporter.&#10;--disable-screenshot command line option in com.github.ptest."/>
             </properties>
           </component>
         </children>
